[package]
name = "misskey-channel-archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }
emojis = "0.6.1"
lazy-regex = { version = "3.1.0", features = ["regex-lite", "lite"] }
regex-lite = "0.1.5"
reqwest = { version = "0.11.23", default-features = false, features = ["gzip", "deflate", "brotli", "rustls-tls-native-roots", "json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_path_to_error = "0.1.15"
tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread"] }
url = { version = "2.5.0", features = ["serde"] }
