[package]
name = "misskey-channel-archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.5.1", features = ["derive"] }
emojis = "0.6.1"
lazy-regex = { version = "3.1.0", features = ["regex-lite", "lite"] }
regex-lite = "0.1.5"
reqwest = { version = "0.11.24", default-features = false, features = ["gzip", "deflate", "brotli", "rustls-tls-native-roots", "json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_path_to_error = "0.1.15"
tokio = { version = "1.36.0", features = ["macros", "rt", "rt-multi-thread"] }
url = { version = "2.5.0", features = ["serde"] }
